# arglite

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: advanced.rs  basic.rs
src/: error.rs  lib.rs  parser.rs
