[package]
name = "arglite"
version = "0.1.0"
edition = "2021"
authors = ["kortgrabb"]
description = "A lightweight argument parser for command-line applications."
license = "MIT"
repository = "https://github.com/kortgrabb/arglite"
readme = "README.md"
keywords = ["cli", "args", "parser", "argument", "command-line"]
categories = ["command-line-interface", "command-line-utilities"]
documentation = "https://docs.rs/arglite"
homepage = "https://github.com/kortgrabb/arglite"

[dependencies]

[[example]]
name = "basic"
path = "examples/basic.rs"

[lib]
name = "arglite"
path = "src/lib.rs"